# mcpserverexample

./: README.md  main.py  pyproject.toml
src/mcpserver/: deployment.py
