[project]
name = "mcpserver-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.19.0",
]

[project.script]
mcp-server = "mcpserver.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
package-dir = {"" = "src"}

[tools.setuptools.packages.find]
where = ["src"]
